syntax = "proto3";

package content_bank;

// Request/Response messages for ContentBank operations
message CreateContentBankRequest {
  string name = 1;
  string user_id = 2;
}

message CreateContentBankResponse {
  string id = 1;
  string name = 2;
  string user_id = 3;
  string created_at = 4;
}

message FindAllContentBanksRequest {
  optional int32 page = 1;
  optional int32 limit = 2;
  optional string name = 3;
  string user_id = 4;
}

message ContentBankItem {
  int32 id = 1;
  string name = 2;
  string user_id = 3;
  string created_at = 4;
  string updated_at = 5;
  optional int32 content_entries = 6;
}

message PaginationInfo {
  int32 page = 1;
  int32 limit = 2;
  int32 total = 3;
  int32 total_pages = 4;
}

message FindAllContentBanksResponse {
  repeated ContentBankItem content_banks = 1;
  PaginationInfo pagination = 2;
}

message FindOneContentBankRequest {
  string id = 1;
  string user_id = 2;
}

message FindOneContentBankResponse {
  string id = 1;
  string name = 2;
  string user_id = 3;
  string created_at = 4;
  int32 entries_count = 5;
}

message UpdateContentBankRequest {
  string id = 1;
  optional string name = 2;
  string user_id = 3;
}

message UpdateContentBankResponse {
  string id = 1;
  string name = 2;
  string user_id = 3;
  string updated_at = 4;
}

message RemoveContentBankRequest {
  string id = 1;
  string user_id = 2;
}

message RemoveContentBankResponse {
  string message = 1;
}

message DuplicateContentBankRequest {
  string id = 1;
  string user_id = 2;
  optional string name = 3;
}

message DuplicateContentBankResponse {
  string id = 1;
  string name = 2;
  string user_id = 3;
  string created_at = 4;
}

// ContentBank service definition
service ContentBankService {
  rpc CreateContentBank(CreateContentBankRequest) returns (CreateContentBankResponse);
  rpc FindAllContentBanks(FindAllContentBanksRequest) returns (FindAllContentBanksResponse);
  rpc FindOneContentBank(FindOneContentBankRequest) returns (FindOneContentBankResponse);
  rpc UpdateContentBank(UpdateContentBankRequest) returns (UpdateContentBankResponse);
  rpc RemoveContentBank(RemoveContentBankRequest) returns (RemoveContentBankResponse);
  rpc DuplicateContentBank(DuplicateContentBankRequest) returns (DuplicateContentBankResponse);
}